[gd_scene load_steps=4 format=3 uid="uid://cdm278c68si7d"]

[ext_resource type="Script" uid="uid://kh50xqr48jhm" path="res://tree_trunk.gd" id="1_8fnex"]
[ext_resource type="Texture2D" uid="uid://dbn2qk4vitiwf" path="res://icon.svg" id="2_uenuv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb8ko"]
size = Vector2(32, 32)

[node name="TreeTrunk" type="StaticBody2D"]
position = Vector2(154, 108)
input_pickable = true
script = ExtResource("1_8fnex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sb8ko")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0.607811, 0.215425, 0.0468462, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_uenuv")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
